# naten

./: .env.example  .gitignore  CLAUDE.md  README.md  agno_mcp.py  betting_mcp_server.py  cloud_deployment_plan.md  docker-compose.yml  install-claude-ubuntu.sh  setup.sh
da_code/: .env.example  README.md  __init__.py  agent.py  agent_factory.py  agent_interface.py  agno_agent.py  agno_cli.py  agno_tools.py  async_agent.py  async_ui.py  async_ui_simple.py  chat_memory.py  cli.py  config.py  context.py  execution_events.py  langgraph_agent_correct.py  mcp_tool.py  models.py  pyproject.toml  shell.py  splash.py  telemetry.py  test_agno_tools.py  tmp_nudge_phrases.txt  todo_mcp.py  todo_tool.py  tools.py  ui.py  ui_modern.py  ux.py
da_code_leg/: README.md  agent_interface.py  chat_memory.py  cli.py  context.py  execution_events.py  pyproject.toml  telemetry.py  test_connection.py
dashboard/: Dockerfile  app.py  requirements.txt
dashboard/static/: rancher_dark.css
dashboard/templates/: logs.html  rancher_dashboard.html
mcp/: README.md  requirements.txt
mcp/basemcp/: __init__.py  ts_mongo.py
mcp/clipjs/: README.md  package.json
mcp/clipjs/src/: server.js
mcp/clippy/: README.md  __init__.py  pyproject.toml  server.py
mcp/common/: mcp_foundation.py
mcp/fileio/: .coverage  .gitignore  Dockerfile  README.md  ci-local.sh  config.json  dev-setup.sh  directory_ops.py  file_ops.py  mcp_server.py  models.py  pyproject.toml  pytest.ini  server.py  utils.py
mcp/fileio/reports/: bandit.json  black-check.txt  coverage-unit.xml  junit-integration.xml  junit-unit.xml
mcp/fileio/tests/: conftest.py  test_file_operations_async.py  test_file_operations_sync.py
mcp/gateway/: .nfs000000000005220900000001  nginx.conf
mcp/mongodb/: Dockerfile  models.py  pyproject.toml  server.py
mcp/search/: Dockerfile  models.py  pyproject.toml  requirements.txt  server.py
mcp/toolsession/: .gitignore  Dockerfile  README.md  config.json  config.py  mcp_foundation.py  pyproject.toml  python_config.json  python_mcp.py  server.py  test_mcp_client.py  test_python_session.py  tools.py  ts_mongo.py
mcp/webmcp/: README.md  __init__.py  package.json  pyproject.toml  webmcp.py
mcp/webmcp/src/: server.js
