[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongo-mcp"
version = "1.0.0"
description = "MongoDB MCP Server - Database operations for MongoDB"
authors = [{name = "MongoDB MCP", email = "admin@mongo-mcp.local"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0"
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0"
]

[project.scripts]
mongo-mcp-server = "server:main"

[tool.setuptools]
packages = []
py-modules = ["server", "models", "mcp_foundation"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "-q", "--strict-markers"]
testpaths = ["."]
python_files = ["test_*.py"]
asyncio_mode = "auto"