[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "search-mcp"
version = "0.0.0"
description = "Search MCP Server for web search and content extraction"
authors = [
    {name = "Orenco", email = "admin@orenco.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "httpx>=0.25.2",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "feedparser>=6.0.10",
    "python-dateutil>=2.8.2",
    "pydantic>=2.5.0",
    "motor>=3.3.2",
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0"
]

[project.urls]
Repository = "https://github.com/dtsunami/naten.git"

[tool.setuptools]
packages = []
py-modules = ["server", "models"]

[project.scripts]
search-mcp = "server:main"